--- a/app/views/v6-pcn/penalty-charge-details-DD-SIMPLIFIED.html
+++ b/app/views/v6-pcn/penalty-charge-details-DD-SIMPLIFIED.html
@@ -35,7 +35,9 @@ Penalty Charge Notice details on hold
         </span>
       </h3>
       <p>We were unable to verify your details. You will not be able to pay by Direct Debit.</p>
-      <p>You can now either confirm you were entitled to free NHS prescriptions, pay in full, or make a partial payment by {{ 12 | alterTodaysDateByNumberOfDays }}.</p>
+      <!--<p>You can now either confirm you were entitled to free NHS prescriptions, pay in full, or make a partial payment by {{ 12 | alterTodaysDateByNumberOfDays }}.</p>-->
+      
+      <p>You can now either pay in full, or make a partial payment by {{ 12 | alterTodaysDateByNumberOfDays }}.</p>
       <p>If you do not respond, an extra surcharge of up to £50 may be added to these charges.</p>
     </div>
 
@@ -94,10 +96,14 @@ Penalty Charge Notice details on hold
       </div>
     </dl>
 
+
+    <!--
+
     <p>If you were entitled to free NHS prescriptions, answering some questions to confirm this can help us resolve this issue.</p>
     <p>If you were not entitled to free NHS prescriptions and need to pay a Penalty Charge Notice, you can pay by debit or credit card.</p>
     
-    </dl>
+
+
   </div>
 
 </div>
@@ -106,6 +112,34 @@ Penalty Charge Notice details on hold
 <a href="what-you-need-to-do-next-bsa-SIMPLIFIED" class="nhsuk-button">
   Continue
 </a>
+-->
+
+<h2>You’ll not be able to confirm your entitlement online</h2>
+    <p>This is because you have either:</p>
+    <ul>
+      <li>an active Direct Debit</li>
+      <li>previously set up a Direct Debit</li>
+    </ul>
+
+
+    
+    
+    <p><a href="https://www.nhsbsa.nhs.uk/contact-nhs-help-health-costs" target="_blank">Contact us if you have any further queries about confirming your <br> entitlement (opens in a new tab)</a>.</p>
+
+    <h2>Pay a Penalty Charge Notice</h2>
+    <p>If you were not entitled to free NHS prescriptions and need to pay a Penalty Charge Notice, you can pay by either debit or credit card.</p>
+    <p>You are not able to pay by Direct Debit. This is because either:</p>
+    <ul>
+      <li>we were unable to confirm your details when you applied previously</li>
+      <li>you have previously had a Direct Debit plan cancelled</li>
+      <li>the amount you need to pay is below the minimum needed to set up a Direct Debit</li>
+    </ul>
+  </div>
+
+  </div>
+
+
+  <a href="payment-choice" class="nhsuk-button">Pay</a>
 
 
 
