Updating references from PCN to Penalty Charge Notice.

--- a/app/views/v6-pcn/kickout/cannot-set-up-dd-manual-payment-SIMPLIFIED.html
+++ b/app/views/v6-pcn/kickout/cannot-set-up-dd-manual-payment-SIMPLIFIED.html
@@ -16,7 +16,7 @@
 
             <!--<hr class="nhsuk-section-break nhsuk-section-break--l nhsuk-section-break--visible">-->
 
-            <h2 class="nhsuk-heading-m">How to pay your Penalty Charge Notice (PCN) online</h2>
+            <h2 class="nhsuk-heading-m">How to pay your Penalty Charge Notice online</h2>
 
             <p>You can use this service to make a payment using a debit or credit card. You can either:</p>
 
@@ -54,9 +54,9 @@
 
                     <!-- CONTENT FOR MAKE MANUAL PAYMENTS EVERY MONTH -->
                 
-                    <p class="nhsuk-body">If you want spread the cost of your PCN over several payments, you can make regular manual payments.</p>
-                    <p class="nhsuk-body">You will need to make your first payment within 28 days (by {{ 28 | alterTodaysDateByNumberOfDays }}). You then need to continue to make payments every month until you have paid the PCN in full.</p>
-                    <p class="nhsuk-body">Payments can be as much as you like, but we suggest a payment each month of £16.67. This will mean you will pay your PCN in full within 3 months.</p>
+                    <p class="nhsuk-body">If you want spread the cost of your Penalty Charge Notice over several payments, you can make regular manual payments.</p>
+                    <p class="nhsuk-body">You will need to make your first payment within 28 days (by {{ 28 | alterTodaysDateByNumberOfDays }}). You then need to continue to make payments every month until you have paid the Penalty Charge Notice in full.</p>
+                    <p class="nhsuk-body">Payments can be as much as you like, but we suggest a payment each month of £16.67. This will mean you will pay your Penalty Charge Notice in full within 3 months.</p>
 
                     <!-- SUGGESTED -->
                     {% from '../MACRO-payment-plan.njk' import paymentPlan %}
@@ -85,11 +85,11 @@
 
 
             <!-- OTHER WAYS TO PAY YOUR PCN -->
-            <h2 class="nhsuk-heading-m">Other ways to pay your PCN</h2>
+            <h2 class="nhsuk-heading-m">Other ways to pay your Penalty Charge Notice</h2>
 
             <p>You can also make payments over the phone.</p>
             <p><strong>Telephone:</strong> 0300 330 9291</p>
-            <p>You will need to keep a record of your PCN reference number to make a payment.</p>
+            <p>You will need to keep a record of your Penalty Charge Notice reference number to make a payment.</p>
             <p><a href="https://www.nhsbsa.nhs.uk/contact-nhs-help-health-costs" class="nhsuk-link--no-visited-state">Find out about call charges and other ways to contact us on our website.</a></p>
             
 
