Trying out a payment calculator method.

--- a/app/assets/sass/main.scss
+++ b/app/assets/sass/main.scss
@@ -11,3 +11,10 @@
 ///////////////////////////////////////////
 // Add your custom CSS/Sass styles below...
 ///////////////////////////////////////////
+
+@media print {
+    .no-print {
+        display: none;
+    }
+}
+
