--- a/app/views/layout.html
+++ b/app/views/layout.html
@@ -32,7 +32,7 @@
     })
   }}
 
-  <div class="nhsuk-width-container ">
+  <div class="nhsuk-width-container no-print">
 
           <!-- phase banner -->
           <div class="nhsuk-phase-banner">
