--- a/app/views/v6-pcn/kickout/cannot-set-up-dd-manual-payment-SIMPLIFIED-2.html
+++ b/app/views/v6-pcn/kickout/cannot-set-up-dd-manual-payment-SIMPLIFIED-2.html
@@ -57,7 +57,7 @@
                     <p class="nhsuk-body">If you want spread the cost of your Penalty Charge Notice over several payments, you can make regular manual payments.</p>
                     <p class="nhsuk-body">You will need to make your first payment by {{ 31 | alterTodaysDateByNumberOfDays }}. You then need to continue to make payments every month until you have paid the Penalty Charge Notice in full.</p>
                     
-                    <p class="nhsuk-body">You can use our <a target="_blank" class="nhsuk-link" href="../experimental/payment-plan-calculator-date?atp=50.00&nom=3">payment plan calculator (opens in a new tab)</a> to help you plan your payments over 3 months.</p>
+                    <p class="nhsuk-body">You can use our <a target="_blank" class="nhsuk-link" href="../experimental/payment-plan-calculator-date?atp=50.00&nom=3&sdd=&sdm=&sdy=">payment plan calculator (opens in a new tab)</a> to help you plan your payments over 3 months.</p>
 
                     <!-- WARNING OPTION -->
                     {{ warningCallout({
