--- a/app/views/v6-pcn/partial-payment-made-SIMPLIFIED-2.html
+++ b/app/views/v6-pcn/partial-payment-made-SIMPLIFIED-2.html
@@ -88,7 +88,7 @@ Payment confirmation
          
       }) }}
 
-      <p class="nhsuk-body" target="_blank">You can use our <a href="experimental/payment-plan-calculator-date?atp=25.00&sdd={{ 'day' | getTodaysDate }}&sdm={{ 'month' | getTodaysDate }}&sdy={{ 'year' | getTodaysDate }}">payment plan calculator (opens in a new tab)</a> to help you plan your payments.</p>
+      <p class="nhsuk-body" target="_blank">You can use our <a href="experimental/payment-plan-calculator-date?atp=25.00&nom=&sdd={{ 'day' | getTodaysDate }}&sdm={{ 'month' | getTodaysDate }}&sdy={{ 'year' | getTodaysDate }}">payment plan calculator (opens in a new tab)</a> to help you plan your payments.</p>
 
       {{ button({
         text: 'Make another payment',
