Handling the February edge-case for payment dates.

--- a/app/views/v6-pcn/kickout/cannot-set-up-dd-manual-payment-SIMPLIFIED-3.html
+++ b/app/views/v6-pcn/kickout/cannot-set-up-dd-manual-payment-SIMPLIFIED-3.html
@@ -63,7 +63,7 @@
 
                         </style>
 
-                        <p class="nhsuk-body">If you make a £16.67 payment today, and then 2 further payments of £16.67 on the {{ 'nth' | getTodaysDate }} of each month, you will pay your Penalty Charge Notice in full within 3 months.</p>
+                        <p class="nhsuk-body">If you make a £16.67 payment today, and then 2 further payments of £16.67 on the {{ 3 | getPaymentDate }} of each month, you will pay your Penalty Charge Notice in full within 3 months.</p>
 
                         {{ summaryList({
                             rows: [
