Updating the designs to reflect the interim "no dates" version of the payment plan suggestion.

--- a/app/views/v6-pcn/MACRO-partial-payment-form.njk
+++ b/app/views/v6-pcn/MACRO-partial-payment-form.njk
@@ -33,6 +33,8 @@
             <p class="nhsuk-body">You can choose to pay more than £16.67 this month, but this will not count toward your next monthly payment.</p>
         {% elseif formType === 'simplified' %}
             <p class="nhsuk-body">Payments can be as much as you like, but we suggest a payment each month of £16.67 to pay over 3 months.</p>
+        {% elseif formType === 'simplifiedNoDates' %}
+            <!--<p class="nhsuk-body">If you make a £16.67 payment today, and then 2 further payments of £16.67 on the {{ 3 | getPaymentDate }} of each month, you will pay your Penalty Charge Notice in full within 3 months.</p>-->
         {% endif %}
             
         <hr class="nhsuk-section-break nhsuk-section-break--l nhsuk-section-break--visible">
@@ -49,8 +51,8 @@
           },
           items: [
             {
-              value: 'I understand that if I fail to make regular monthly payments, an extra surcharge of up to £50 may be added to my charges.',
-              text: 'I understand that if I fail to make regular monthly payments, an extra surcharge of up to £50 may be added to my charges.'
+              value: 'I understand that if I fail to make regular payments every 31 days, an extra surcharge of up to £50 may be added to my charges.',
+              text: 'I understand that if I fail to make regular payments every 31 days, an extra surcharge of up to £50 may be added to my charges.'
             }
           ]
         }) }}
