Removing the full stop from the final link on the KYC fail kick-out screen.

--- a/app/views/v6-pcn/kickout/cannot-set-up-dd-manual-payment-SIMPLIFIED-2.html
+++ b/app/views/v6-pcn/kickout/cannot-set-up-dd-manual-payment-SIMPLIFIED-2.html
@@ -87,7 +87,7 @@
             <p>You can also make payments over the phone.</p>
             <p><strong>Telephone:</strong> 0300 330 9291</p>
             <p>You will need to keep a record of your Penalty Charge Notice reference number to make a payment.</p>
-            <p><a href="https://www.nhsbsa.nhs.uk/contact-nhs-help-health-costs" class="nhsuk-link--no-visited-state">Find out about call charges and other ways to contact us on our website.</a></p>
+            <p><a href="https://www.nhsbsa.nhs.uk/contact-nhs-help-health-costs" class="nhsuk-link--no-visited-state">Find out about call charges and other ways to contact us on our website</a></p>
             
 
             <p>
