--- a/app/views/v6-pcn/kickout/cannot-set-up-dd-manual-payment.html
+++ b/app/views/v6-pcn/kickout/cannot-set-up-dd-manual-payment.html
@@ -82,7 +82,7 @@
 
     <p>You will need to keep a record of your PCN reference number to make a payment.</p>
 
-    <p><a href="https://www.nhsbsa.nhs.uk/contact-nhs-help-health-costs" target="_blank">Find out about call charges and other ways to contact us on our website</a>.</p>
+    <p><a href="https://www.nhsbsa.nhs.uk/contact-nhs-help-health-costs" target="_blank">Find out about call charges and other ways to contact us on our website</a></p>
     
     <!-- <form action="/v6-pcn/kickout/cannot-set-up-dd-manual-payment" method="post">
         <div class="nhsuk-form-group nhsuk-u-margin-bottom-0">
