--- a/app/views/v6-pcn/kickout/cannot-set-up-dd-manual-payment-SIMPLIFIED-NO-DATES.html
+++ b/app/views/v6-pcn/kickout/cannot-set-up-dd-manual-payment-SIMPLIFIED-NO-DATES.html
@@ -97,7 +97,7 @@
                      {{ button({
                         classes: 'nhsuk-u-margin-bottom-0',
                         text: 'Make a manual payment',
-                        href: '../partial-payment-SIMPLIFIED'
+                        href: '../partial-payment'
                     }) }}
                     
                     
