--- a/app/views/v6-pcn/partial-payment-SIMPLIFIED-NO-DATES.html
+++ b/app/views/v6-pcn/partial-payment-SIMPLIFIED-NO-DATES.html
@@ -31,7 +31,7 @@ Pay by card
           {% from './MACRO-partial-payment-form.njk' import partialPaymentForm %}
 
           <!-- PAYMENT BLOCK -->
-          {{ paymentBlock( 'simplified', 'false', 'false' ) }}
+          {{ paymentBlock( 'simplifiedPartial', 'false', 'false' ) }}
 
           <h2 class="nhsuk-heading-m">How much are you paying today?</h2>
 
