--- a/app/views/v6-pcn/partial-payment-made-SIMPLIFIED.html
+++ b/app/views/v6-pcn/partial-payment-made-SIMPLIFIED.html
@@ -91,7 +91,7 @@ Payment confirmation
 
       {{ button({
         text: 'Make another payment',
-        href: 'partial-payment'
+        href: 'payment-choice'
       }) }}
 
 
