--- a/app/views/v6-pcn/penalty-charge-details-DD-SIMPLIFIED.html
+++ b/app/views/v6-pcn/penalty-charge-details-DD-SIMPLIFIED.html
@@ -47,7 +47,7 @@ Penalty Charge Notice details on hold
     {% from './MACRO-payment-block.njk' import paymentBlock %}
 
     <!-- PAYMENT BLOCK -->
-    {{ paymentBlock( 'simplifiedNoPayment', 'false', 'false' ) }}
+    {{ paymentBlock( 'simplified', 'false', 'false' ) }}
 
 
     <p>If you have recently made a payment, it can take 24 hours for payment information to update.</p>
