--- a/app/views/v6-pcn/full-payment-made.html
+++ b/app/views/v6-pcn/full-payment-made.html
@@ -74,7 +74,7 @@ Payment confirmation
         Print this page
       </p></a>
 
-      <h3>How to avoid a Penalty Charge Notice in the future</h3>
+      <h3>How to avoid a future Penalty Charge Notice</h3>
       <p>We match exemptions using a combination of your:</p>
       <ul>
         <li>name</li>
