--- a/app/views/v6-pcn/kickout/cannot-set-up-dd-manual-payment-SIMPLIFIED-NO-DATES.html
+++ b/app/views/v6-pcn/kickout/cannot-set-up-dd-manual-payment-SIMPLIFIED-NO-DATES.html
@@ -48,7 +48,7 @@
                     <!-- CONTENT FOR MAKE MANUAL PAYMENTS EVERY MONTH -->
                 
                     <p class="nhsuk-body">If you want spread the cost of your Penalty Charge Notice over several payments, you can make regular manual payments.</p>
-                    <p class="nhsuk-body">You will need to make your first payment by {{ 31 | alterTodaysDateByNumberOfDays }}. You then need to continue to make payments every 31 days until you have paid the Penalty Charge Notice in full.</p>
+                    <p class="nhsuk-body">You'll need to make your first payment by {{ 31 | alterTodaysDateByNumberOfDays }}. You then need to continue to make payments every 31 days until you have paid the Penalty Charge Notice in full.</p>
                     <!--<p class="nhsuk-body">Payments can be as much as you like, but we suggest a payment each month of £16.67. This will mean you will pay your Penalty Charge Notice in full within 3 months.</p>-->
 
                     {% set paymentPlanDates %}
@@ -124,7 +124,7 @@
 
             <p>You can also make payments over the phone.</p>
             <p><strong>Telephone:</strong> 0300 330 9291</p>
-            <p>You will need to keep a record of your Penalty Charge Notice reference number to make a payment.</p>
+            <p>You'll need to keep a record of your Penalty Charge Notice reference number to make a payment.</p>
             <p><a href="https://www.nhsbsa.nhs.uk/contact-nhs-help-health-costs" class="nhsuk-link--no-visited-state">Find out about call charges and other ways to contact us on our website</a></p>
             
 
