--- a/app/views/v6-pcn/penalty-charge-details-DD-SIMPLIFIED.html
+++ b/app/views/v6-pcn/penalty-charge-details-DD-SIMPLIFIED.html
@@ -34,7 +34,7 @@ Penalty Charge Notice details on hold
           Do not delay
         </span>
       </h3>
-      <p>We were unable to verify your details. You will not be able to pay by Direct Debit.</p>
+      <p>We were unable to verify your details.</p>
       <!--<p>You can now either confirm you were entitled to free NHS prescriptions, pay in full, or make a partial payment by {{ 12 | alterTodaysDateByNumberOfDays }}.</p>-->
       
       <p>You can now either pay in full, or make a partial payment by {{ 31 | alterTodaysDateByNumberOfDays }}.</p>
