--- a/app/views/v6-pcn/partial-payment-made-SIMPLIFIED.html
+++ b/app/views/v6-pcn/partial-payment-made-SIMPLIFIED.html
@@ -98,7 +98,7 @@ Payment confirmation
       <p><a href="javascript:window.print();">Print this page</a></p>
 
 
-      <h2>How to avoid a Penalty Charge Notice in the future</h2>
+      <h2>How to avoid a future Penalty Charge Notice</h2>
       <p>We match exemptions using a combination of your:</p>
       <ul>
         <li>name</li>
