--- a/app/views/enquiry/pecs/enter-postcode.html
+++ b/app/views/enquiry/pecs/enter-postcode.html
@@ -16,7 +16,7 @@ Enter your postcode as shown on your letter
 <div class="nhsuk-grid-row">
   <div class="nhsuk-grid-column-two-thirds">
 
-    <form action="v4-postcode-input" method="get" class="form">
+    <form action="enquiry-letter-details" method="get" class="form">
 
       <span class="nhsuk-caption-m">Your details</span>
 
@@ -45,20 +45,6 @@ Enter your postcode as shown on your letter
       }) }}
 
       <p><a href="respond-to-your-letter">Cancel</a></p>
-
-      <!-- <h1 class="nhsuk-heading-l">Enter your postcode as shown on your letter</h1>
-      <div class="nhsuk-form-group">
-        <label class="nhsuk-label" for="one-half">
-          <div class="nhsuk-hint" id="example-with-hint-text-hint">
-            For example, WA4 1AB
-          </div>
-        </label>
-        <input class="nhsuk-input nhsuk-u-width-one-half" id="v3-postcode-input" name="postcode" type="text">
-      </div>
-      <button class="nhsuk-button" data-module="nhsuk-button" type="submit">
-        Continue
-      </button>
-    </form> -->
   </div>
 </div>
 
