--- a/app/views/enquiry/pecs/V7/enquiry-letter-details.html
+++ b/app/views/enquiry/pecs/V7/enquiry-letter-details.html
@@ -50,7 +50,7 @@ Enquiry letter
       text: "Name"
       },
       {
-      text: "Michelle Doe"
+      text: "Jack Burton"
       }
       ],
       [
