Creating DECS screens for signed-off KYC Fail pages.

--- a/app/views/v6-pcn-decs/partial-payment-made-SIMPLIFIED.html
+++ b/app/views/v6-pcn-decs/partial-payment-made-SIMPLIFIED.html
@@ -52,7 +52,7 @@ Payment confirmation
               So far you've paid
             </dt>
             <dd class="nhsuk-summary-list__value">
-              £32.90
+              £52.40
             </dd>
         
             
@@ -78,16 +78,28 @@ Payment confirmation
 
       
       </div>
-      <h3>Further payments</h3>
-      <p>You can use this service to pay the remaining amount of <strong>£25</strong>.</p>
 
-      <a href="payment-method"><button class="nhsuk-button" data-module="nhsuk-button" type="submit" >
-        Make another payment
-      </button></a>
 
-      <a href="javascript:window.print();"><p>
-        Print this page
-      </p></a>
+
+      {{ warningCallout({
+         classes: 'nhsuk-u-margin-bottom-4',
+         heading: 'Your next manual payment',
+         HTML: '
+         <p class="nhsuk-body">You can return to <a href="respond-to-your-letter">this service</a> to pay your remaining balance at any time.</p>
+         <p class="nhsuk-heading-s">You must make your next payment by ' + ( 31 | alterTodaysDateByNumberOfDays ) + '</p>'
+      }) }}
+
+      
+
+      {{ button({
+        text: 'Make another payment',
+        href: 'payment-choice'
+      }) }}
+
+      <p><a href="javascript:window.print();">Print this page</a></p>
+
+
+
       <h2>How to avoid a future Penalty Charge Notice</h2>
       <p>We match exemptions using a combination of your:</p>
       <ul>
