Updating to "Dental treatment form". Whoops.

--- a/app/views/v6-pcn-decs/surcharge-penalty-charge-notice-DD-BLOCKED.html
+++ b/app/views/v6-pcn-decs/surcharge-penalty-charge-notice-DD-BLOCKED.html
@@ -131,7 +131,7 @@ Penalty Charge Notice details on hold
     <p>If you have recently made a payment, it can take 24 hours for payment information to update.</p>
 
    
-    <h3>Details on the prescription</h3>
+    <h3>Details on the dental treatment form</h3>
     <dl class="nhsuk-summary-list">
       <div class="nhsuk-summary-list__row">
         <dt class="nhsuk-summary-list__key">
