Adding an isSCN mode to the DD kickout pages.

--- a/app/views/v6-pcn/kickout/cannot-set-up-dd-manual-payment-SIMPLIFIED-NO-DATES.html
+++ b/app/views/v6-pcn/kickout/cannot-set-up-dd-manual-payment-SIMPLIFIED-NO-DATES.html
@@ -49,6 +49,7 @@
                 
                     <p class="nhsuk-body">If you want spread the cost of your Penalty Charge Notice over several payments, you can make regular manual payments.</p>
                     <p class="nhsuk-body">You'll need to make your first payment by {{ 31 | alterTodaysDateByNumberOfDays }}. You then need to continue to make payments every 31 days until you have paid the Penalty Charge Notice in full.</p>
+
                     <!--<p class="nhsuk-body">Payments can be as much as you like, but we suggest a payment each month of £16.67. This will mean you will pay your Penalty Charge Notice in full within 3 months.</p>-->
 
                     {% set paymentPlanDates %}
@@ -86,10 +87,16 @@
                     }) }}
 
                     <!-- WARNING OPTION -->
+                    {% if data.isSCN === 'true' %}
+                        {% set warningText = '<p class="nhsuk-body">Payments will not be taken automatically. You are responsible for making a payment every 31 days.</p><p class="nhsuk-body">If you do not, we will treat it as a deliberate decision to avoid paying the charges that you owe the NHS and we may start debt recovery proceedings.</p>' %}
+                    {% else %}
+                        {% set warningText = '<p class="nhsuk-body">Payments will not be taken automatically. You are responsible for making a payment every 31 days. If you do not, you may have to pay a surcharge of up to £50.</p>' %}
+                    {% endif %}
+
                     {{ warningCallout({
                         classes: 'nhsuk-u-margin-bottom-5',
                         heading: 'Important',
-                        HTML: '<p>Payments will not be taken automatically. You are responsible for making a payment every 31 days. If you do not, you may have to pay a surcharge of up to £50.</p>'
+                        HTML: warningText
                     }) }}
 
                     <p class="nhsuk-heading-m nhsuk-u-margin-bottom-6">You must make your first payment by {{ 31 | alterTodaysDateByNumberOfDays }}</p>
