First draft of expedite a PCN.

--- a/app/views/v5-enquiry/you-will-be-sent-pcn-EXPEDITE.html
+++ b/app/views/v5-enquiry/you-will-be-sent-pcn-EXPEDITE.html
@@ -15,24 +15,26 @@ You are not entitled to free NHS prescriptions
 <div class="nhsuk-grid-row">
   <div class="nhsuk-grid-column-two-thirds">
 
-    <h2>
-      Not entitled to free NHS prescriptions
-    </h2>
+    <h1 class="nhsuk-heading-l">Not entitled to free NHS prescriptions</h1>
     <p>If you were not entitled to free NHS prescriptions you will be sent a Penalty Charge Notice (PCN).</p>
     <p>We send the enquiry letter before the PCN to give you time to confirm you were entitled to free NHS prescriptions
       which can stop a PCN being issued.</p>
     <p>If you do not confirm you were entitled to free NHS prescriptions within [number] days (by [date]) we will send a PCN.</p>
-    <p>You will not be able to make a payment until you receive the PCN.</p>
-    <p>Once you have received it, you’ll be able to use this service to pay your penalty charge.</p>
-    
-    
+
     {{ details({
       text: 'I was not entitled to free NHS prescriptions but have an exceptional reason why I made the claim',
       html: '<p class="nhsuk-body">If you were not entitled to free NHS prescriptions but have an exceptional reason why you made the claim, you can ask us to review your case. <class="nhsuk-link" href="who-can-ask-for-review">Find out if you can ask for a review</a>.</p>'
     }) }}
-    
-</div>
-</div>
 
+    <h2 class="nhsuk-heading-m">Accept and pay your PCN</h2>
+    <p>If you cannot confirm you were entitled to free NHS prescriptions, you can accept your PCN charge and pay today.</p>
+    
+    {{ button({
+      text: 'Accept PCN',
+      href: 'accept-pcn-EXPEDITE'
+    }) }}
+
+</div>
+</div>
 
     {% endblock %}
