--- a/app/views/enquiry/pecs/V7/what-happens-next.html
+++ b/app/views/enquiry/pecs/V7/what-happens-next.html
@@ -38,7 +38,7 @@ text: "Go back"
 
     <p><a href="https://www.nhsbsa.nhs.uk/our-policies/privacy/challenge-your-pcn-privacy-notice" target="_blank">Find
         out more about how we use your information (opens in a new window)</a>.</p>
-    <form action="confirm-entitlement" method="get" class="form">
+    <form action="confirm-entitlement" method="post" class="form">
       {{ button({
       text: 'Continue'
       }) }}
